package com.example.perkmanager.enumerations;

public enum MembershipType {
    CAA,
    VISA,
    MASTERCARD,
    AMEX,
    AIRMILES
}