package com.example.perkmanager.enumerations;

public enum ProductType {
    MOVIES,
    HOTELS,
    FLIGHTS,
    CARS,
    DINING
}