package com.example.perkmanager.enumerations;

public enum VoteType {
    UPVOTE,
    DOWNVOTE
}
